--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -2,6 +2,7 @@
 {% import "forms.html" as forms %}
 {% block head_scripts %}
 {{ super() }}
+    <script src="{{ url_for('serve.files', name='jquery_multi_download', filename='jquery.multiDownload.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index_action.js') }}"></script>
 {% endblock %}
 
@@ -39,13 +40,17 @@
     {% else %}
         <h1>{{ _("Global Index") }}</h1>
     {% endif %}
+    <div class="moin-index-message">
+        <span>
+        </span>
+   </div>
     <div class="moin-select-actions">
         <div>
             <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">&nbsp;</span>
             <span class="show-action">&nbsp;</span> 
         </div>
         <ul>
-            <li>{{ _("Download") }}</li>
+            <li class="moin-download-trigger">{{ _("Download") }}</li>
         </ul>
     </div>
     <div class='moin-clr'></div>
@@ -76,6 +81,9 @@
         {% for fullname, relname, contenttype, hassubitem in index %}
             <div>
                 <span class="moin-select-item">&nbsp;</span>
+                <a href="about:blank" title="{{ url_for('.download_item', item_name=fullname) }}"
+                   class="moin-download-link">
+                </a>
                 <a href="{{ url_for('.show_item', item_name=fullname) }}" 
                    class="{{ contenttype|contenttype_to_class }}"
                    title="{{ relname }}">
