some css fix on index page for chrome

--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -92,7 +92,7 @@
                 {% if hassubitem %}
                     <a href="{{ url_for('frontend.index', item_name=fullname) }}" 
                        title="{{ _("More") }}"
-                       class="moin-more-index">
+                       class="moin-more-index">&nbsp;
                 </a>
                 {% endif %}
             </div>
