--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -247,8 +247,9 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .action-visible div { background: #4477FF; }
 .moin-select-actions .show-action { cursor: pointer; }
 .moin-select-actions .show-action:before { content: url("../img/moin-movedown.png"); }
-.allitem-selected:before { content: url("../img/moin-checkbox-on.png"); }
-.allitem-toselect:before { content: url("../img/moin-checkbox-off.png"); }
+.moin-select-allitem { display: inline-block; width: 17px; cursor: default; }
+.allitem-selected { background: transparent url("../img/moin-checkbox-on.png") no-repeat; }
+.allitem-toselect { background: transparent url("../img/moin-checkbox-off.png") no-repeat; }
 .moin-select-actions ul { position: absolute; margin: 0; left: 0; top: 2em; padding: 0; display: none; background: #fff; border: 1px solid #E5E5E5; z-index: 1; }
 .moin-select-actions ul li { list-style-type: none; padding: 0.5em; width: 10em; cursor: pointer; }
 .moin-select-actions ul li:hover { background-color: #4477FF; color: #FFFFFF; }
@@ -261,11 +262,10 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 #moin-initials a.selected { background: #4477FF; border-radius: 5px; color: #FFFFFF; text-decoration: none; }
 .moin-item-index { width: 100%; margin-left: 0.5em; }
 .moin-item-index div { float: left; width: 15em; }
-.moin-item-index div .moin-select-item { visibility: hidden; }
-.moin-item-index div .moin-select-item:before { content: url("../img/moin-checkbox-off.png"); }
+.moin-item-index div .moin-select-item { visibility: hidden; display: inline-block; width: 17px; cursor: default; background: transparent url("../img/moin-checkbox-off.png") no-repeat; }
 .moin-item-index div.selected-item .moin-select-item,
 .moin-item-index div:hover .moin-select-item { visibility: visible; }
-.moin-item-index div.selected-item .moin-select-item:before { content: url("../img/moin-checkbox-on.png"); }
+.moin-item-index div.selected-item .moin-select-item { background-image: url("../img/moin-checkbox-on.png"); }
 .moin-select-contenttypes { float: right; position: relative; width: 14em; }
 .moin-select-contenttypes .moin-contenttypes-wrapper { position: absolute; margin: 0; top: 0; left: 0; color: #342D7E; background: #FFFFFF; border: 1px solid #342D7E; width: 14em; }
 .moin-contenttypes-wrapper div { cursor: pointer; margin: 0.1em; padding: 0.2em 1.3em 0.2em 0.2em; background: transparent url("../img/moin-moveup.png") no-repeat center right; } 
@@ -277,7 +277,8 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-contenttypes-wrapper ul li:hover .helper-text { display: block; }
 .moin-contenttypes-wrapper:hover ul { display: block; }
 .moin-contenttypes-wrapper:hover div { background-image: url("../img/moin-movedown.png"); } 
-.moin-more-index:before { content: url("../img/moin-expand.png"); }
+.moin-more-index { background: transparent url("../img/moin-expand.png") no-repeat; display: inline-block; width: 20px; }
+.moin-more-index:hover { text-decoration: none; }
 .moin-index-path { margin-left: 0.5em; }
 .moin-index-path:before { content: url("../img/moin-parent.png"); margin: 0 0.3em; }
 .moin-path-separator { font-size: 120%; color: #4477FF; }
