--- a/MoinMoin/templates/forms.html
+++ b/MoinMoin/templates/forms.html
@@ -68,11 +68,13 @@ Helpers for using flatland with jinja2 to create html forms.
 
 {% macro render_file_uploader(submit_url) %}
     <div id="file_upload">
+        <div class="upload-form">
         <form action="{{ submit_url }}" method="POST" enctype="multipart/form-data" class="upload_file">
             <input type="file" name="data_file" multiple>
             <button type="submit">{{ _("Upload") }}</button>
             <div class="file_upload_label" style="margin: 0;">{{ _("Upload files") }}</div>
         </form>
+        </div>
         <div class="file_upload_overall_progress"><div style="display:none;"></div></div>
         <div class="file_upload_buttons">
             <button class="file_upload_start" style="display:none;">{{ _("Start All") }}</button> 
@@ -86,7 +88,6 @@ Helpers for using flatland with jinja2 to create html forms.
                 <td class="file_upload_progress"><div></div></td>
             </tr>
         </table>
-        <span class="moin-drag">{{ _("(Drag and drop multiple files to this white area to upload them.)") }}</span>
     </div>
     <link rel="stylesheet" href="{{ url_for('serve.files', name='jquery_file_upload', filename='jquery.fileupload-ui.css') }}">
     <script src="{{ url_for('serve.files', name='jquery_file_upload', filename='jquery.fileupload.js') }}"></script>
