--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -7,10 +7,11 @@
 {% endblock %}
 
 {% block content %}
+    <div class="moin-align-right">
     {% if index %}
     <div class="moin-select-contenttypes">
         <div class="moin-contenttypes-wrapper">
-            <div>{{ _("Filter by content type") }}</div>
+            <div class="ct-hide">{{ _("Filter by content type") }}</div>
             {{ gen.form.open(form, method="post", action=url_for('frontend.index', item_name=item_name)) }}
             <ul>
                 {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
@@ -25,6 +26,29 @@
         </div>
     </div>
     {% endif %}
+    <div class="moin-select-actions">
+        <div>
+            <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">&nbsp;</span>
+            <span class="show-action">Actions</span> 
+        </div>
+        <ul>
+            <li id="moin-create-newitem">{{ _("New item") }}</li>
+            <li id="moin-download-trigger">{{ _("Download") }}</li>
+            <li class="moin-action-tab" 
+                id="moin-delete-trigger" 
+                actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
+                {{ _("Delete") }}
+           </li>
+           <li class="moin-action-tab" 
+               id="moin-destroy-trigger" 
+               actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
+               {{ _("Destroy") }}
+           </li>
+        </ul>
+    </div>
+    <div class="clr"></div>
+    </div>
+    <div>
     {% if item_name: %}
         <h1>{{ _("Index of subitems of '%(item_name)s'", item_name=item_name) }}</h1>
         <div class="moin-index-path">
@@ -40,21 +64,7 @@
     {% else %}
         <h1>{{ _("Global Index") }}</h1>
     {% endif %}
-    <div class="moin-index-message">
-        <span>
-        </span>
-   </div>
-    <div class="moin-select-actions">
-        <div>
-            <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">&nbsp;</span>
-            <span class="show-action">&nbsp;</span> 
-        </div>
-        <ul>
-            <li id="moin-download-trigger">{{ _("Download") }}</li>
-            <li class="moin-action-tab" id="moin-delete-trigger" actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">{{ _("Delete") }}</li>
-            <li class="moin-action-tab" id="moin-destroy-trigger" actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">{{ _("Destroy") }}</li>
-            <li id="moin-create-newitem">{{ _("New item") }}</li>
-        </ul>
+    <div class="moin-index-message"><span></span></div>
     </div>
     <div class='moin-clr'></div>
     <div id="moin-new-index" class="moin-item-index">
@@ -105,7 +115,10 @@
     <div class="moin-clr"></div>
     <div id="popup">
         <div id="popup-for-action" class="popup-container">
-            <div class="popup-header">{{ _("Please provide comment for this action") }}</div>
+            <div class="popup-header">
+                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <span>{{ _("Please provide comment for this action") }}</span>
+            </div>
             <div class="popup-body">
                 <input type="text" class="popup-comment" placeholder="{{ _("Enter your comment") }}"/>
                 <input type="hidden" class="popup-action" value=""/>
@@ -115,13 +128,21 @@
             </div>
         </div>
         <div id="popup-for-newitem" class="popup-container">
-            <div class="popup-header">{{ _("Create new item") }}</div>
+            <div class="popup-header">
+                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <span>{{ _("Create new item") }}</span>
+            </div>
             <div class="popup-body">
-                <form action={{ url_for('.ajaxmodify', item_name=item_name) }} method="get">
-                    <input type="text" name="newitem" placeholder="{{ _("Enter item name here") }}" required="true"/>
+                <form action={{ url_for('.ajaxmodify') }} method="post">
+                    <label for="newitem">{{ _("Item name") }}</label>
+                    {% if item_name %}
+                        <input type="text" name="newitem" placeholder="{{ _("Enter item name here") }}" value="{{ item_name }}/" required="true"/>
+                    {% else %}
+                        <input type="text" name="newitem" placeholder="{{ _("Enter item name here") }}" required="true"/>
+                    {% endif %}
                     <br/>
                     <input type="submit" value="{{ _("Create") }}"/>
-                    <input type="button" class="popup-cancel" value="{{ _("Later") }}"/>
+                    <input type="button" class="popup-cancel" value="{{ _("Cancel") }}"/>
                 </form>
             </div>
         </div>
@@ -134,4 +155,5 @@
     </div>
     <span class="moin-drag">{{ _("(Drag and drop multiple files to this white area to upload them.)") }}</span>
     <script src="{{ url_for('static', filename='js/jfu.js') }}"></script>
+    <div id="lightbox">&nbsp;</div>
 {% endblock %}
