--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -7,52 +7,62 @@
 {% endblock %}
 
 {% block content %}
+    <div class="moin-index-message"><span></span></div>
     <div class="moin-align-right">
-    {% if index %}
-    <div class="moin-select-contenttypes">
-        <div class="moin-contenttypes-wrapper">
-            <div class="ct-hide">{{ _("Filter by content type") }}</div>
-            {% set unknown_items_label = _("items having unknown mime types") %}
-            {{ gen.form.open(form, method="post", action=url_for('frontend.index', item_name=item_name)) }}
-            <ul>
-                <li>
-                    <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
-                    <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
-                </li>
-                {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
-                {{ forms.render_filter_field(gen, form['other_text_items'], 'checkbox', contenttype_groups['other text items']) }}
-                {{ forms.render_filter_field(gen, form['image_items'], 'checkbox', contenttype_groups['image items']) }}
-                {{ forms.render_filter_field(gen, form['audio_items'], 'checkbox', contenttype_groups['audio items']) }}
-                {{ forms.render_filter_field(gen, form['video_items'], 'checkbox', contenttype_groups['video items']) }}
-                {{ forms.render_filter_field(gen, form['other_items'], 'checkbox', contenttype_groups['other items']) }}
-                {{ forms.render_filter_field(gen, form['unknown_items'], 'checkbox', unknown_items_label) }}
-                {{ gen.input(form['submit'], type='submit') }}
-            </ul>
-            {{ gen.form.close() }}
-        </div>
-    </div>
-    {% endif %}
-    <div class="moin-select-actions">
-        <div>
-            <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">&nbsp;</span>
-            <span class="show-action">Actions</span> 
-        </div>
         <ul>
-            <li id="moin-create-newitem">{{ _("New item") }}</li>
-            <li id="moin-download-trigger">{{ _("Download") }}</li>
-            <li class="moin-action-tab" 
-                id="moin-delete-trigger" 
-                actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
-                {{ _("Delete") }}
-           </li>
-           <li class="moin-action-tab" 
-               id="moin-destroy-trigger" 
-               actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
-               {{ _("Destroy") }}
-           </li>
+            {% if index %}
+            <li class="action-bar"> 
+            <div class="moin-select-all">
+                <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">{{ _("Select All") }}</span>
+            </div>
+            </li>
+            {% endif %}
+            <li class="action-bar">
+            <div class="moin-select-actions">
+                <div>
+                    <span class="show-action">Actions</span> 
+                </div>
+                <ul>
+                    <li id="moin-create-newitem">{{ _("New item") }}</li>
+                    <li id="moin-download-trigger">{{ _("Download") }}</li>
+                    <li class="moin-action-tab" 
+                        id="moin-delete-trigger" 
+                        actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
+                        {{ _("Delete") }}
+                    </li>
+                    <li class="moin-action-tab" 
+                        id="moin-destroy-trigger" 
+                        actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
+                        {{ _("Destroy") }}
+                    </li>
+                </ul>
+            </div>
+            </li>
+            {% if index %}
+            <li class="action-bar">
+            <div class="moin-contenttypes-wrapper">
+                <div class="ct-hide">{{ _("Filter by content type") }}</div>
+                {% set unknown_items_label = _("items having unknown mime types") %}
+                {{ gen.form.open(form, method="post", action=url_for('frontend.index', item_name=item_name)) }}
+                <ul>
+                    <li>
+                        <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
+                        <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
+                    </li>
+                    {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
+                    {{ forms.render_filter_field(gen, form['other_text_items'], 'checkbox', contenttype_groups['other text items']) }}
+                    {{ forms.render_filter_field(gen, form['image_items'], 'checkbox', contenttype_groups['image items']) }}
+                    {{ forms.render_filter_field(gen, form['audio_items'], 'checkbox', contenttype_groups['audio items']) }}
+                    {{ forms.render_filter_field(gen, form['video_items'], 'checkbox', contenttype_groups['video items']) }}
+                    {{ forms.render_filter_field(gen, form['other_items'], 'checkbox', contenttype_groups['other items']) }}
+                    {{ forms.render_filter_field(gen, form['unknown_items'], 'checkbox', unknown_items_label) }}
+                    {{ gen.input(form['submit'], type='submit') }}
+                </ul>
+                {{ gen.form.close() }}
+            </div>
+            </li>
+            {% endif %}
         </ul>
-    </div>
-    <div class="clr"></div>
     </div>
     <div>
     {% if item_name: %}
@@ -70,7 +80,6 @@
     {% else %}
         <h1>{{ _("Global Index") }}</h1>
     {% endif %}
-    <div class="moin-index-message"><span></span></div>
     </div>
     <div class='moin-clr'></div>
     <div id="moin-new-index" class="moin-item-index">
