--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -242,18 +242,19 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 
 /* item index page */
 #moin-content h1 { display: inline; }
-.moin-select-actions { position: relative; margin: 1em 0; padding: 0; background: #FFFFFF; width: 7em; z-index: 2; white-space: nowrap; color: #342D7E; }
+.moin-select-all { padding: 0.5em; color: #342D7E; background: #FFFFFF; border: 1px solid #E5E5E5; text-align: left; }
+.moin-select-actions { position: relative; margin: 0 1em; padding: 0; background: #FFFFFF; z-index: 2; white-space: nowrap; color: #342D7E; text-align: left; }
 .moin-select-actions div { margin: 0; padding: 0.5em; border: 1px groove #E5E5E5; }
 .moin-select-actions div:hover,
 .action-visible div { background: #4477FF; color: #FFFFFF; }
 .moin-select-actions .show-action { cursor: pointer; }
 .show-action:after { content: url("../img/moin-moveup.png"); margin: 0 0.2em; }
 .action-visible .show-action:after { content: url("../img/moin-movedown.png"); margin: 0 0.2em; }
-.moin-select-allitem { display: inline-block; width: 17px; cursor: default; }
-.allitem-selected { background: transparent url("../img/moin-checkbox-on.png") no-repeat; }
-.allitem-toselect { background: transparent url("../img/moin-checkbox-off.png") no-repeat; }
+.moin-select-allitem { display: inline-block; cursor: default; text-align: left; }
+.allitem-selected:after { content: url("../img/moin-checkbox-on.png"); margin: 0 0.2em; }
+.allitem-toselect:after { content: url("../img/moin-checkbox-off.png"); margin: 0 0.2em; }
 .moin-select-actions ul { position: absolute; margin: 0; left: 0; top: 2em; padding: 0; display: none; background: #fff; border: 1px solid #E5E5E5; z-index: 1; }
-.moin-select-actions ul li { list-style-type: none; padding: 0.5em; width: 9em; cursor: pointer; }
+.moin-select-actions ul li { display: list-item; list-style-type: none; padding: 0.5em; min-width: 7em; cursor: pointer; }
 .moin-select-actions ul li:hover { background-color: #4477FF; color: #FFFFFF; }
 .moin-index-message { width: 50%; margin: 1em auto; text-align: center; display: none; }
 .moin-index-message span { padding: 4px; background-color: #FFFF00; color: #111111; }
@@ -268,14 +269,15 @@ input#comment { border: 1px solid #8cacbb; display: inline; margin: .33em 0; pad
 .moin-item-index div.selected-item .moin-select-item,
 .moin-item-index div:hover .moin-select-item { visibility: visible; }
 .moin-item-index div.selected-item .moin-select-item { background-image: url("../img/moin-checkbox-on.png"); }
-.moin-align-right { float: right; min-width: 22em; }
-.moin-select-contenttypes { position: relative; width: 14em; float: right; }
-.moin-select-contenttypes .moin-contenttypes-wrapper { position: absolute; margin: 0; top: 0; left: 0; color: #342D7E; background: #FFFFFF; border: 1px solid #E5E5E5; width: 14em; }
-.moin-contenttypes-wrapper div { cursor: pointer; margin: 0.1em; padding: 0.5em; } 
+.moin-align-right { text-align: right; float: right; }
+.moin-align-right ul { margin: 0; padding: 0;  }
+.moin-align-right ul li.action-bar { list-style-type: none; display: inline-block; }
+.moin-contenttypes-wrapper { position: relative; margin: 0; color: #342D7E; background: #FFFFFF; border: 1px solid #E5E5E5; min-width: 12em; text-align: left; }
+.moin-contenttypes-wrapper div { cursor: pointer; margin: 0.1em; padding: 0.5em 1.2em 0.5em 0.5em ; height: 1em; } 
 div.ct-shown { background: #4477FF url("../img/moin-movedown.png") no-repeat center right; color: #FFFFFF; }
 div.ct-hide { background: transparent url("../img/moin-moveup.png") no-repeat center right; }
-.moin-contenttypes-wrapper ul { display: none; margin: 0.3em 0; border-top: 1px solid #E5E5E5; } 
-.moin-contenttypes-wrapper ul li { list-style-type: none; padding: 0.5em 0.2em; width: 13.6em; }
+.moin-contenttypes-wrapper ul { position: absolute; top: 1.9em; left: 0; display: none; margin: 0.3em 0; border-top: 1px solid #E5E5E5; z-index: 2; background: #FFFFFF; border: 1px solid #E5E5E5; } 
+.moin-contenttypes-wrapper ul li { list-style-type: none; padding: 0.5em; min-width: 11.5em; }
 .moin-contenttypes-wrapper ul li label { margin-left: 0.5em; }
 .moin-contenttypes-wrapper ul li .helper-text { font-size: 0.7em; color: #6E6A6B; display: none; }
 .moin-contenttypes-wrapper ul li:hover { background: #E5E5E5; }
