--- a/MoinMoin/templates/history.html
+++ b/MoinMoin/templates/history.html
@@ -46,8 +46,12 @@
                 <td><a href="{{ url_for('frontend.show_item_meta', item_name=doc.name, rev=doc.revid) }}">{{ _('meta') }}</a></td>
                 <td><a href="{{ url_for('frontend.download_item', item_name=doc.name, rev=doc.revid) }}">{{ _('download') }}</a></td>
                 <td><a href="{{ url_for('frontend.highlight_item', item_name=doc.name, rev=doc.revid) }}">{{ _('highlight') }}</a></td>
+                {% if user.may.write(item_name) -%}
                 <td><a href="{{ url_for('frontend.revert_item', item_name=doc.name, rev=doc.revid) }}">{{ _('revert') }}</a></td>
+                {%- endif %}
+                {% if user.may.destroy(item_name) -%}
                 <td><a href="{{ url_for('frontend.destroy_item', item_name=doc.name, rev=doc.revid) }}">{{ _('destroy') }}</a></td>
+                {%- endif %}
             </tr>
             {% endfor %}
             {% if bookmark_time %}
