--- a/MoinMoin/templates/itemviews.html
+++ b/MoinMoin/templates/itemviews.html
@@ -6,9 +6,22 @@
                'frontend.highlight_item', 'frontend.show_item_meta', 'frontend.download_item',
                'frontend.history', 'frontend.backrefs', 'frontend.sitemap',
                'frontend.similar_names',
-               'frontend.modify_item',
-               'frontend.copy_item', 'frontend.rename_item', 'frontend.delete_item', 'frontend.destroy_item',
+               'frontend.copy_item',
            ] -%}
+            <li>
+            <a href="{{ url_for(endpoint, item_name=item_name) }}" title="{{ title }}" rel="nofollow"> {{ label }}</a>
+            </li>
+        {%- endif %}
+
+		{% if endpoint in [
+            'frontend.modify_item', 'frontend.rename_item', 'frontend.delete_item', 'frontend.rename_item'
+           ] and user.may.write(item_name) -%}
+            <li>
+            <a href="{{ url_for(endpoint, item_name=item_name) }}" title="{{ title }}" rel="nofollow"> {{ label }}</a>
+            </li>
+        {%- endif %}
+        
+        {% if endpoint =='frontend.destroy_item' and user.may.destroy(item_name) -%}
             <li>
             <a href="{{ url_for(endpoint, item_name=item_name) }}" title="{{ title }}" rel="nofollow"> {{ label }}</a>
             </li>
