--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -628,6 +628,20 @@ a.download { font-size: 120%; letter-spacing: 0.05em; font-weight: bold; backgro
 .moin-itemviews form div { display: inline; margin: 0; }
 .moin-itemviews select { font-size: 100%; vertical-align: middle; }
 
+/* moin-header moin-subitem-navigation */
+.moin-subitem-navigation { clear: both; display: block; margin: 0; background: #C4D9FF; padding: 0; height: auto;
+                  font-size: 0.8em; border-bottom: 1px solid #4D7DA9; border-top: 1px solid #4D7DA9; margin-top: -1px; }
+.moin-subitem-navigation .list-header { display: inline-block; background: #81BBF2; padding: 4px 8px;}
+.moin-subitem-navigation .sep { font-size: 1.2em; margin-left: 0px; }
+.moin-subitem-navigation ul { display: inline-block; margin: 0; padding: 2px 8px; }
+.moin-subitem-navigation li { display: inline-block; padding: 0; margin: 4px 10px; line-height: 1em; }
+.moin-subitem-navigation a,
+.moin-subitem-navigation a:visited { color: #0044B3; }
+.moin-subitem-navigation a:hover { text-decoration: underline; }
+.moin-subitem-navigation form,
+.moin-subitem-navigation form div { display: inline; margin: 0; }
+.moin-subitem-navigation select { font-size: 100%; vertical-align: middle; }
+
 /* moin-page moin-footer */
 #moin-footer { clear: both; margin: 0 0; }
 #moin-footer hr { margin: 0; background-color: #ccc; }
