--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -631,9 +631,9 @@ a.download { font-size: 120%; letter-spacing: 0.05em; font-weight: bold; backgro
 /* moin-header moin-subitem-navigation */
 .moin-subitem-navigation { clear: both; display: block; margin: 0; background: #C4D9FF; padding: 0; height: auto;
                   font-size: 0.8em; border-bottom: 1px solid #4D7DA9; border-top: 1px solid #4D7DA9; margin-top: -1px; }
-.moin-subitem-navigation .list-header { display: inline-block; background: #81BBF2; padding: 4px 8px;}
+.moin-subitem-navigation .list-header { display: block; background: #81BBF2; padding: 3.5px 8px; float: left; margin-bottom: -1em; }
 .moin-subitem-navigation .sep { font-size: 1.2em; margin-left: 0px; }
-.moin-subitem-navigation ul { display: inline-block; margin: 0; padding: 2px 8px; }
+.moin-subitem-navigation ul { display: block; margin: 0; padding: 2px 8px; }
 .moin-subitem-navigation li { display: inline-block; padding: 0; margin: 4px 10px; line-height: 1em; }
 .moin-subitem-navigation a,
 .moin-subitem-navigation a:visited { color: #0044B3; }
