--- a/MoinMoin/templates/show.html
+++ b/MoinMoin/templates/show.html
@@ -39,20 +39,7 @@
 {% block subitem_navigation %}
     {% set subitems = theme_supp.subitem_index(item_name) %}
     {% if subitems %}
-        <div class="moin-subitem-navigation">
-            <div class="list-header">
-                {{ _('Subitems') }} 
-            </div>
-            <ul>
-                {% for fullname, shortname, contenttype, has_children in subitems %}
-                    <li>
-                        <a href="{{ url_for('frontend.show_item', item_name=fullname) }}"
-                            title="{{ shortname }}">{{ shortname }}</a>
-                        {% if has_children %}<span class="sep">/</span>{% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
+        {{ utils.render_subitem_navigation(subitems) }}
     {% endif %}
 {% endblock %}
 
