--- a/MoinMoin/templates/modify_text.html
+++ b/MoinMoin/templates/modify_text.html
@@ -2,20 +2,14 @@
 {% import "utils.html" as utils %}
 
 {% set subitems = theme_supp.subitem_index(item_name) %}
-{% if subitems %}
-    {% block subitem_navigation %}
+{% block subitem_navigation %}
+    {% if subitems %}
         {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(subitems) %}
-            {# XXX: The replace filter is used to prevent XSS attacks
-                This needs security review, it could still be vulnerable #}
-            <a href="#" onclick="linkSubitem('{{ shortname|replace("\\", "\\\\")|replace("'", "\\'") }}')" title="{{ _('Link to Subitem') }}">
-                {{ _('Link') }}
-            </a>
-            <a href="#" onclick="transcludeSubitem('{{ shortname|replace("\\", "\\\\")|replace("'", "\\'") }}')" title="{{ _('Transclude Subitem') }}">
-                {{ _('Transclude') }}
-            </a>
+            <button class="link-action" onclick="linkSubitem('{{ shortname|js_string_escape }}', '{{ fullname|js_string_escape }}')" title="{{ _('Link to Subitem') }}" value="{{ _('Link to Subitem') }}" /></button>
+            <button class="transclude-action" onclick="transcludeSubitem('{{ shortname|js_string_escape }}', '{{ fullname|js_string_escape }}')" title="{{ _('Transclude Subitem') }}" value="{{ _('Transclude') }}"></button>
         {% endcall %}
-    {% endblock %}
-{% endif %}
+    {% endif %}
+{% endblock %}
 
 {% block data_editor %}
 {{ gen.textarea(form['data_text'], lang=lang, dir=direction, rows=rows_data, cols=cols) }}
