--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -643,6 +643,11 @@ a.download { font-size: 120%; letter-spacing: 0.05em; font-weight: bold; backgro
 .moin-subitem-navigation li:hover { background: #4D7DA9; }
 .moin-subitem-navigation a { color: #0044B3; }
 .moin-subitem-navigation a:hover { text-decoration: underline; }
+.link-action,
+.transclude-action { border: hidden; text-indent: -9000%; padding: 0; margin: 0 -2px; vertical-align: middle;
+                height: 16px; width: 16px; overflow: hidden; cursor: pointer; }
+.moin-subitem-navigation .link-action { background: url(../img/moin-attach.png) no-repeat center center; }
+.moin-subitem-navigation .transclude-action { background: url(../img/moin-text.png) no-repeat center center; }
 
 /* moin-page moin-footer */
 #moin-footer { clear: both; margin: 0 0; }
