--- a/MoinMoin/templates/modify_text.html
+++ b/MoinMoin/templates/modify_text.html
@@ -5,8 +5,12 @@
 {% block subitem_navigation %}
     {% if subitems %}
         {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(subitems) %}
-            <button class="link-action" onclick="linkSubitem('{{ shortname|js_string_escape }}', '{{ fullname|js_string_escape }}')" title="{{ _('Link to Subitem') }}" value="{{ _('Link to Subitem') }}" /></button>
-            <button class="transclude-action" onclick="transcludeSubitem('{{ shortname|js_string_escape }}', '{{ fullname|js_string_escape }}')" title="{{ _('Transclude Subitem') }}" value="{{ _('Transclude') }}"></button>
+            {% set shortname = shortname|js_string_escape %}
+            {% set fullname = fullname|js_string_escape %}
+            <button class="link-action" onclick="linkSubitem('{{ shortname }}', '{{ fullname }}')"
+                title="{{ _('Link to Subitem') }}">{{ _('Link') }}</button>
+            <button class="transclude-action" onclick="transcludeSubitem('{{ shortname }}', '{{ fullname }}')"
+                title="{{ _('Transclude Subitem') }}">{{ _('Transclude') }}</button>
         {% endcall %}
     {% endif %}
 {% endblock %}
