--- a/MoinMoin/templates/modify_text.html
+++ b/MoinMoin/templates/modify_text.html
@@ -5,11 +5,11 @@
 {% block subitem_navigation %}
     {% if subitems %}
         {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(subitems) %}
-            {% set shortname = shortname|js_string_escape %}
-            {% set fullname = fullname|js_string_escape %}
-            <button class="link-action" onclick="linkSubitem('{{ shortname }}', '{{ fullname }}')"
+            {% set shortname = shortname|json_dumps %}
+            {% set fullname = fullname|json_dumps %}
+            <button class="link-action" onclick='linkSubitem({{ shortname }}, {{ fullname }})'
                 title="{{ _('Link to Subitem') }}">{{ _('Link') }}</button>
-            <button class="transclude-action" onclick="transcludeSubitem('{{ shortname }}', '{{ fullname }}')"
+            <button class="transclude-action" onclick='transcludeSubitem({{ shortname }}, {{ fullname }})'
                 title="{{ _('Transclude Subitem') }}">{{ _('Transclude') }}</button>
         {% endcall %}
     {% endif %}
