--- a/MoinMoin/templates/modify_text.html
+++ b/MoinMoin/templates/modify_text.html
@@ -1,10 +1,8 @@
 {% extends "modify_binary.html" %}
 {% import "utils.html" as utils %}
 
-{% set subitems = theme_supp.subitem_index(item_name) %}
 {% block subitem_navigation %}
-    {% if subitems %}
-        {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(subitems) %}
+        {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(item_name, True) %}
             {% set shortname = shortname|json_dumps %}
             {% set fullname = fullname|json_dumps %}
             <button class="link-action" onclick='linkSubitem({{ shortname }}, {{ fullname }})'
@@ -12,7 +10,6 @@
             <button class="transclude-action" onclick='transcludeSubitem({{ shortname }}, {{ fullname }})'
                 title="{{ _('Transclude Subitem') }}">{{ _('Transclude') }}</button>
         {% endcall %}
-    {% endif %}
 {% endblock %}
 
 {% block data_editor %}
